--- a/gp/src/main/resources/application.properties
+++ b/gp/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://dpg-cifjv9lph6el4umpd2mg-a.oregon-postgres.render.com/cmpt_276_gp_db
 spring.datasource.username=cmpt_276_gp_db_user
 spring.datasource.password=JRdFP14fKeUyykP7rGZ3QCtQIL7tVuFW
+
+sendgrid.key = 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
