emailing works need to figure out how to encrypyt api key

--- a/gp/src/main/resources/application.properties
+++ b/gp/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.url=jdbc:postgresql://dpg-cifjv9lph6el4umpd2mg-a.oregon-postgr
 spring.datasource.username=cmpt_276_gp_db_user
 spring.datasource.password=JRdFP14fKeUyykP7rGZ3QCtQIL7tVuFW
 
-sendgrid.key = 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
+sendgrid.key = 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
